--- a/index.html
+++ b/index.html
@@ -3,9 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <title>Snake Game 1.0.0</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1 class="center">Snake Game</h1>
+        <h5 class="center">
+            Situs ini dibuat untuk penjelasan tentang snake.
+        </h5>
+        <br>
+        <hr>
+        <br> 
+        <div class="hyperlink">
+            <a class="" href="#intro">Intro</a>
+            <a class="" href="#penjelasan">Penjelasan</a>
+            <a class="" href="#photos">Photos</a>
+        </div>       
+
+        <p>
+            Halaman ini adalah halaman untuk menjelaskan proyek kami.
+        </p>
+        <p>
+            Pada proyek akhir kali ini, kami membuat proyek dengan bahasa C. Dikarenakan waktu sendiri, 
+            kami memutuskan untuk tidak menggunakan graphics library, melainkan menggunakan console.
+
+            
+        </p>
+        <img alt="gambar satu" src="none">  
+        <div id="intro">
+            <ul>
+                <li><h3>Intro</h3></li>
+            </ul>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+        </div>
+        <div id="penjelasan">
+            <ul>
+                <li><h3>Penjelasan</h3></li>
+            </ul>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+        </div>
+        <div id="photos">
+            <ul>
+                <li><h3>Photos</h3></li>
+            </ul>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
+        </div>
+
+    </div>
 </body>
 </html>
