--- a/index.html
+++ b/index.html
@@ -16,47 +16,68 @@
         <br>
         <hr>
         <br> 
-        <div class="hyperlink">
-            <a class="" href="#intro">Intro</a>
-            <a class="" href="#penjelasan">Penjelasan</a>
-            <a class="" href="#photos">Photos</a>
+        <div class="center space">
+            <a class="hyperlink" href="#intro">Intro</a>
+            <a class="hyperlink" href="#penjelasan">Penjelasan</a>
+            <a class="hyperlink" href="#photos">Photos</a>
         </div>       
 
         <p>
-            Halaman ini adalah halaman untuk menjelaskan proyek kami.
-        </p>
-        <p>
             Pada proyek akhir kali ini, kami membuat proyek dengan bahasa C. Dikarenakan waktu sendiri, 
             kami memutuskan untuk tidak menggunakan graphics library, melainkan menggunakan console.
-
-            
         </p>
         <img alt="gambar satu" src="none">  
-        <div id="intro">
+        <div class="" id="intro">
             <ul>
-                <li><h3>Intro</h3></li>
+                <li><h3 class="section-right">Intro</h3></li>
             </ul>
+            <hr>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
         </div>
+
+        <br>
         <div id="penjelasan">
             <ul>
-                <li><h3>Penjelasan</h3></li>
+                <li><h3 class="section-left">Penjelasan</h3></li>
             </ul>
+            <hr>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
         </div>
-        <div id="photos">
+
+        <br>
+        <div class="" id="photos">
             <ul>
-                <li><h3>Photos</h3></li>
+                <li><h3 class="section-right">Photos</h3></li>
             </ul>
+            <hr>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </p>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
         </div>
 
     </div>
+
+    <br>
+    <footer>
+        <div>
+            <p class="center">
+                all rights reserved.
+            </p>
+        </div>
+    </footer>
+    <br>
 </body>
 </html>
