--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <title>Snake Game 1.0.0</title>
 </head>
 <body>
@@ -15,12 +16,12 @@
         </h5>
         <br>
         <hr>
-        <br> 
         <div class="center space">
             <a class="hyperlink" href="#intro">Intro</a>
             <a class="hyperlink" href="#penjelasan">Penjelasan</a>
             <a class="hyperlink" href="#photos">Photos</a>
-        </div>       
+        </div>
+        <hr>       
 
         <p>
             Pada proyek akhir kali ini, kami membuat proyek dengan bahasa C. Dikarenakan waktu sendiri, 
@@ -28,8 +29,9 @@
         </p>
         <img alt="gambar satu" src="none">  
         <div class="" id="intro">
+            
             <ul>
-                <li><h3 class="section-right">Intro</h3></li>
+                <li><h3 class="section-right"><i class="small material-icons">adjust</i> Intro</h3></li>
             </ul>
             <hr>
             <p>
@@ -43,9 +45,19 @@
         <br>
         <div id="penjelasan">
             <ul>
-                <li><h3 class="section-left">Penjelasan</h3></li>
+                <li><h3 class="section-left"><i class="small material-icons">adjust</i> Penjelasan</h3></li>
             </ul>
             <hr>
+            <p>
+                <pre>
+                    
+                    var foo = "bar";
+                    var hello = "world";
+                    console.log(foo);
+                    console.log(hello);
+                </pre>
+            </p>
+
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </p>
@@ -57,7 +69,7 @@
         <br>
         <div class="" id="photos">
             <ul>
-                <li><h3 class="section-right">Photos</h3></li>
+                <li><h3 class="section-right"><i class="small material-icons">adjust</i> Photos</h3></li>
             </ul>
             <hr>
             <p>
