--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
         
         <div id="Photos" class="tabcontent container">
             <!-- <h3>Tokyo</h3> -->
-            <img src="/img/Picture3.png" alt="ur mom"/>
-            <img src="/img/Picture1.png" width="800" alt="is"/>
-            <img src="/img/Picture2.png" width="800" alt="my favorite dish"/>
+            <img src="https://raw.githubusercontent.com/idahdam/snake-game/gh-pages/img/Picture3.png" alt="ur mom"/>
+            <img src="https://raw.githubusercontent.com/idahdam/snake-game/gh-pages/img/Picture1.png" width="800" alt="is"/>
+            <img src="https://raw.githubusercontent.com/idahdam/snake-game/gh-pages/img/Picture2.png" width="800" alt="my favorite dish"/>
 
         </div>
 
